--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,3 +1,11 @@
+# Product
+
+msi_store_product_list:
+    pattern:  /products
+    defaults: { _controller: MsiStoreBundle:Product:list }
+
+# Cart Item
+
 msi_store_cart_item_list:
     pattern:  /cart
     defaults: { _controller: MsiStoreBundle:CartItem:list }
