--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -4,6 +4,12 @@ msi_store_product_list:
     pattern:  /products
     defaults: { _controller: MsiStoreBundle:Product:list }
 
+msi_store_product_admin_show:
+    pattern:  /admin/product/{id}
+    defaults: { _controller: MsiStoreBundle:Admin/Product:show, _admin: msi_store_product_admin }
+    requirements:
+        id: \d+
+
 # Cart Item
 
 msi_store_cart_item_list:
