--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -4,12 +4,6 @@ msi_store_product_list:
     pattern:  /products
     defaults: { _controller: MsiStoreBundle:Product:list }
 
-msi_store_product_admin_show:
-    pattern:  /admin/product/{id}
-    defaults: { _controller: MsiStoreBundle:Admin/Product:show, _admin: msi_store_product_admin }
-    requirements:
-        id: \d+
-
 # Cart Item
 
 msi_store_cart_item_list:
@@ -27,6 +21,14 @@ msi_store_cart_item_edit:
 msi_store_cart_item_delete:
     pattern:  /cart/{id}/delete
     defaults: { _controller: MsiStoreBundle:CartItem:delete }
+
+# Cart
+
+msi_store_cart_admin_show:
+    pattern:  /admin/cart/{id}
+    defaults: { _controller: MsiStoreBundle:Admin/Cart:show, _admin: msi_store_cart_admin }
+    requirements:
+        id: \d+
 
 # Checkout
 
