--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,8 +1,18 @@
+# Search
+
+msi_store_search_index:
+    pattern:  /search
+    defaults: { _controller: MsiStoreBundle:Search:index }
+
 # Product
 
 msi_store_product_list:
     pattern:  /products
     defaults: { _controller: MsiStoreBundle:Product:list }
+
+msi_store_product_show:
+    pattern:  /products/{id}
+    defaults: { _controller: MsiStoreBundle:Product:show }
 
 # Cart Item
 
